# pgcooldown

./: .gitignore  ChangeLog.md  Changelog.md  MANIFEST.in  README.md  RUNME.sh  auto-rebuild.sh  bench.py  mre.py  pyproject.toml  setup.py
.github/workflows/: build-linux.yml  build-macos.yml  build-macos13.yml  build-windows.yml  cibuildwheel.yml  cibw-new.yml  learn.yml  mkwheels.yml
cooldown/: __init__.py
examples/: class.py  decorator.py
include/: docstrings.h
src/pgcooldown/: __init__.py  __init__.pyi
src_c/: mkdocstrings.py  pgcooldown.c
support/: mkdocstrings.py
tests/: test_cooldown.py  test_lerp.py  test_lerpthing.py
