[project]
name = "cooldown"
description = "A cooldown/counter class to trigger time based events in games"
version = "0.1.15"
readme = "README.md"

authors = [
    { name="Michael Lamertz", email="michael.lamertz@gmail.com" }
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Libraries :: pygame",
]

dependencies = [ ]

[project-urls]
homepage = "https://github.com/dickerdackel/cooldown"
bugtracker = "https://github.com/DickerDackel/cooldown/issues"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "-rA -s"
testpaths = [
    "tests",
]

